syntax = "proto3";
package nghuyenthevinh2000.nebula.launchpad;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/notional-labs/anone/x/launchpad/types";

// Msg defines the Msg service.
service Msg {
    rpc CreateProject(MsgCreateProjectRequest) returns (MsgCreateProjectResponse);
    rpc DeleteProject(MsgDeleteProjectRequest) returns (MsgDeleteProjectResponse);
    rpc ModifyStartTime(MsgModifyStartTimeRequest) returns (MsgModifyStartTimeResponse);
    rpc ModifyProjectInformation(MsgModifyProjectInformationRequest) 
        returns (MsgModifyProjectInformationResponse);
}

/*
enum ReleaseMechanism {
    UNKNOWN_RELEASE_MECHANISM = 0;
    ICO = 1;
}
*/

// ===================== MsgCreateProject

message MsgCreateProjectRequest {
    // owner of this project
    string owner = 1 [ (gogoproto.moretags) = "yaml:\"owner\"" ];
    
    // the title of project
    string project_title = 2 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags) = "yaml:\"project_title\""
    ];

    // Project information
    string project_information = 3 [
        (gogoproto.moretags) = "yaml:\"project_information\""
    ];

    // Begin time for a project
    google.protobuf.Timestamp start_time = 4 [
        (gogoproto.stdtime) = true,
        (gogoproto.nullable) = false,
        (gogoproto.moretags) = "yaml:\"start_time\""
    ];

    // Release mechanism from chosen one
    /*
    ReleaseMechanism release_mechanism = 5 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags) = "yaml:\"release_mechanism\""
    ];
    */
}

message MsgCreateProjectResponse {
    uint64 project_id = 1 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags) = "yaml:\"project_id\""
    ];

    // Project address to store assets
    string project_address = 2 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags) = "yaml:\"project_address\""
    ];
}

// ===================== MsgDeleteProject

message MsgDeleteProjectRequest {
    // owner of this project
    string owner = 1 [ (gogoproto.moretags) = "yaml:\"owner\"" ];

    uint64 project_id = 2 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags) = "yaml:\"project_id\""
    ];
}

message MsgDeleteProjectResponse {}

// ===================== MsgModifyStartTime

message MsgModifyStartTimeRequest {
    // owner of this project
    string owner = 1 [ (gogoproto.moretags) = "yaml:\"owner\"" ];

    uint64 project_id = 2 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags) = "yaml:\"project_id\""
    ];

    // Begin time for a project
    google.protobuf.Timestamp start_time = 3 [
        (gogoproto.stdtime) = true,
        (gogoproto.nullable) = false,
        (gogoproto.moretags) = "yaml:\"start_time\""
    ];
}

message MsgModifyStartTimeResponse {}

// ===================== MsgModifyProjectInformation

message MsgModifyProjectInformationRequest {
    // owner of this project
    string owner = 1 [ (gogoproto.moretags) = "yaml:\"owner\"" ];

    uint64 project_id = 2 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags) = "yaml:\"project_id\""
    ];

    // Project information
    string project_information = 3 [
        (gogoproto.nullable) = false,
        (gogoproto.moretags) = "yaml:\"project_information\""
    ];
}

message MsgModifyProjectInformationResponse {}